adding proper summaries, even for multi track activities